css/changelog.styl
.changelogx
    #notice
        display none
    
    body,h1,h2,h3,h4,p,table
        padding 0
        margin 0

    ol li
        margin-bottom 5px
      
    .release
        margin-bottom 20px
        padding-bottom 10px
        border-bottom 1px dashed #ccc

    h1
        font-size 12pt
        padding-top 5px
        padding-bottom 5px

    h2
        font-size 11pt
        padding-top 5px
        padding-bottom 5px

    p
        padding-top 5px
        padding-bottom 5px
        font-size 9pt
        line-height 14pt

    div.infobox
        border 0px solid silver
        margin-bottom 10px
        clear both

    div.infobox h3
        font-size 8pt
        border-bottom 1px solid silver
        background-color #e2ecfe
        padding 3px 5px
        color #000

    div.infobox p
        padding 5px
        font-size 8pt

    div.infobox img.left
        float left

    ul.changes
        margin 0
        padding-left 30px
        list-style-type none
        padding-right 0px

    ul.changes li
        margin-bottom 1px

    .titlebox
        line-height 20px

    h4
        minor-button()
        line-height 26px
        float left
        min-height 26px
        min-width 100px

        a
            background url('/shared/img2/icon-download.png') no-repeat 6px 0px
            padding 0px 6px 0px 32px
            relative(top 1px)

    h5
        margin 0
        font-size 11px
        color: #888
        line-height 11px
        font-weight normal
        padding-left 14px
        float left
        padding-top 20px

    .blog-post-pointer
        background-color #FCFFEA
        font-size 11px
        padding: 0px 3px
        margin-left 83px
        margin-top -44px
        absolute()
        border-radius 2px

    .sticker
        float left
        width 70px
        display block
        text-align right
        background none

    .sticker b
        color white
        font-weight bold
        padding 2px 6px 2px 6px
        border-radius 3px
        font-size 10px
        position relative
        top -1px

    .fixed b
        background-color #00A825

    .new b
        background-color #BCB901

    .removed b
        background-color #BC0E00

    .improved b
        background-color #0486BC

    .note b
        background-color #AEAEAE

    .info
        display table
        padding-left 16px

